extra/Deploy/ingress/vk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: www.vurckubsu.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
  - host: api.vurckubsu.ru
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-service
            port:
              number: 80
